{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 47,
  "lineage": "1217dc09-bab9-57a6-26e5-88b8ae649370",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:internet-gateway/igw-067473eb38cfcc0a0",
            "id": "igw-067473eb38cfcc0a0",
            "owner_id": "141917287833",
            "tags": {
              "Name": "react-shop-shared-eu-west-1"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1"
            },
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-067473eb38cfcc0a0",
            "id": "r-rtb-0123fe154511e1c0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0123fe154511e1c0c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:route-table/rtb-0b1e528ee524f59b1",
            "id": "rtb-0b1e528ee524f59b1",
            "owner_id": "141917287833",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "react-shop-shared-eu-west-1-private"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:route-table/rtb-0123fe154511e1c0c",
            "id": "rtb-0123fe154511e1c0c",
            "owner_id": "141917287833",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067473eb38cfcc0a0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "react-shop-shared-eu-west-1-public"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0341ba51eefb93bd4",
            "route_table_id": "rtb-0b1e528ee524f59b1",
            "subnet_id": "subnet-0f917a99bb9df4c50"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8325ef382dfc2b0",
            "route_table_id": "rtb-0b1e528ee524f59b1",
            "subnet_id": "subnet-0d8e25136f1094d0e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02af3c6310484a982",
            "route_table_id": "rtb-0b1e528ee524f59b1",
            "subnet_id": "subnet-064e86bc5b3b7e566"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fe76c54173b149e",
            "route_table_id": "rtb-0b1e528ee524f59b1",
            "subnet_id": "subnet-0bf3b650061b61c0c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f34faa177043646",
            "route_table_id": "rtb-0b1e528ee524f59b1",
            "subnet_id": "subnet-087cce72daa1ace31"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025d987b5ae2456a4",
            "route_table_id": "rtb-0b1e528ee524f59b1",
            "subnet_id": "subnet-07972c611ecac7842"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01276b140d7aaad66",
            "route_table_id": "rtb-0123fe154511e1c0c",
            "subnet_id": "subnet-07f20734668e0e517"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9332e69516a0e9b",
            "route_table_id": "rtb-0123fe154511e1c0c",
            "subnet_id": "subnet-0ba658937aa4e62d4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9aa48a55b6d4ca2",
            "route_table_id": "rtb-0123fe154511e1c0c",
            "subnet_id": "subnet-056e79af0730eabe3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:subnet/subnet-0f917a99bb9df4c50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f917a99bb9df4c50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141917287833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1a"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1a"
            },
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:subnet/subnet-0d8e25136f1094d0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8e25136f1094d0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141917287833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1b"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1b"
            },
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:subnet/subnet-064e86bc5b3b7e566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064e86bc5b3b7e566",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141917287833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1c"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1c"
            },
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:subnet/subnet-0bf3b650061b61c0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf3b650061b61c0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141917287833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1a"
            },
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:subnet/subnet-087cce72daa1ace31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087cce72daa1ace31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141917287833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1b"
            },
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:subnet/subnet-07972c611ecac7842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07972c611ecac7842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141917287833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1c"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1c"
            },
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:subnet/subnet-07f20734668e0e517",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f20734668e0e517",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "141917287833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1a"
            },
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:subnet/subnet-0ba658937aa4e62d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba658937aa4e62d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "141917287833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1b"
            },
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:subnet/subnet-056e79af0730eabe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056e79af0730eabe3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "141917287833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1c"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1c"
            },
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:vpc/vpc-0b7f23f3f624eb838",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0145fb2495b8c70",
            "default_route_table_id": "rtb-0d912b2ed70c0f965",
            "default_security_group_id": "sg-07f0128f172ab1ddb",
            "dhcp_options_id": "dopt-0c03337a54ce2e907",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b7f23f3f624eb838",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d912b2ed70c0f965",
            "owner_id": "141917287833",
            "tags": {
              "Name": "react-shop-shared-eu-west-1"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1"
            }
          }
        }
      ]
    }
  ]
}